# Leash

./: .gitignore  Cargo.toml  README.md  install.sh
src/: application.rs  cpu_info.rs  cpu_restrict.rs  freq_util.rs  layout.rs  layout_cpu.rs  layout_ram.rs  leash-cpu-limit.desktop  main.rs  ram_usage.rs  restrict.rs
